tests/vendor/invalid/semantics/out_of_scope_do_loop.c
//tags: simple, loop, scoping
int main() {
    do {
        int a = a + 1;
    } while (a < 100);
}